Added Image Upload and Transfer between Named Users with Websockets

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 <body>
     <form>
         <input type="text" placeholder = "Your message">
+        <input type="file" name="image">
         <button type="submit">Send</button>
     </form>
     <ul></ul>
